Fix notice scrolling on mobile devices

--- a/style/common.css
+++ b/style/common.css
@@ -502,3 +502,15 @@ small.diary-name {
     transition: all 500ms ease;
 
 }
+
+html {
+	overflow: none;
+}
+
+body {
+	overflow: none;
+}
+
+.wrapper {
+	overflow: auto;
+}
